--- a/css/main.css
+++ b/css/main.css
@@ -899,7 +899,7 @@ main{
 
 }
 .other-btn{
-  width: 250px;
+  width: 20vw;
   height: 200px;
   margin:40px;
   border-radius: 20px;
@@ -1043,6 +1043,15 @@ ul.box {
 }
 
 @media screen and (max-width: 917px) {
+  .other-wrapper{
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .other-btn{
+    width: 220px;
+    height: 200px;
+  }
   .other__title{
     font-size: 3rem;
     letter-spacing: 5px;
