--- a/css/infomation.css
+++ b/css/infomation.css
@@ -56,7 +56,7 @@ ul{
     width: 100%;
     height: 2px;
     background-color: #fff;
- }
+}
 
 
   /*下の線を擬似要素で作成*/
@@ -69,8 +69,7 @@ ul{
     width: 70%; /*一番下の線だけちょっと短くするため*/
     height: 2px;
     background-color: #fff;
- }
-   
+}
 }
 
 
@@ -161,7 +160,7 @@ ul{
 }
 
 .about_pre_v2{
-  width:35%;
+  width:45%;
   text-align: justify;
   margin-right: 20px;
 }
@@ -362,23 +361,23 @@ ul{
 .bg_main_3::before {
   content: '';
   background-image: url(../img/pallet.webp);
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   background-position: center;
   background-size: cover;
   position: absolute;
-  left: -60px;
+  left: -50px;
   z-index: 30;
 
 }
 
-/*画像の写真の位置を指定するために*/
+/* 画像の写真の位置を指定するために
 .bg_main_4{
   position: relative;
 }
 
 /*アブソリュートだけ指定すると要素が重なるためleftやらを指定している。*/
-.bg_main_4::before {
+/* .bg_main_4::before {
   content: '';
   background-image: url(../img/painting.webp);
   width: 30px;
@@ -389,7 +388,7 @@ ul{
   left: -50px;
   z-index: 30;
 
-}
+}  */
 
 
 .photo{
@@ -610,7 +609,7 @@ ul{
  }
 
  .about p{
-  font-size: 1.2rem;
+  font-size: 1rem;
  }
 
  .vision_top {
