--- a/css/header.css
+++ b/css/header.css
@@ -57,7 +57,7 @@ header.active{
   display: block;
   width: 100%;
   height: 100%;
-  background-image: url('../img/logo.png');
+  background-image: url('../img/site_logo.png');
   background-size: cover;
   background-position:center;
   background-repeat: no-repeat;
