--- a/css/infomation.css
+++ b/css/infomation.css
@@ -1,8 +1,11 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
 body{
   /* 全体の余白を０にするため */
   margin: 0%; 
   padding: 0%; 
-  font-family: 'Noto Serif JP', serif;
+  font-family: 'Roboto Condensed', sans-serif;
 
 }
 ul{
@@ -273,7 +276,7 @@ ul{
 }
 
 .activity_1:nth-child(odd) .phrase{
-  background-color: #fff;
+  background-color: #ffffe0;
   color: #292b2c;
   /*文字の背景を縦横調整のため paddingは余白*/
   width: 30vw;
@@ -292,7 +295,7 @@ ul{
 }
 
 .activity_1:nth-child(even) .phrase{
-  background-color: #fff;
+  background-color: #ffffe0;
   color: #292b2c;
   /*文字の背景を縦横調整のため paddingは余白*/
   width: 30vw;
@@ -663,11 +666,14 @@ ul{
   .activity_1:nth-child(odd) .phrase{
     width: 100%;
     color: black;
-    background-color:#FFF;
+    background-color:#ffffe0;
     /*文字の背景を縦横調整のため paddingは余白*/
     margin: 0 auto;
   
   }
+
+
+
 
   .photo{
     width: 80%;
@@ -676,18 +682,23 @@ ul{
   .activity_1:nth-child(even) .phrase{
     width: 100%;
     color: black;
-    background-color:#FFF;
+    background-color:#ffffe0;
     /*文字の背景を縦横調整のため paddingは余白*/
     margin: 0 auto;
   
   }
+  
 
-  .photo{
-    width: 80%;
+
+}
+
+@media screen and (max-width:765px){
+  .activity_1{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 0;
   }
-
-
-
 
 
 }
