--- a/css/jigyou.css
+++ b/css/jigyou.css
@@ -1,8 +1,11 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
 body{
   /* 全体の余白を０にするため */
   margin: 0%; 
   padding: 0%; 
-  font-family: 'Noto Serif JP', serif;
+  font-family: 'Roboto Condensed', sans-serif;
 
 }
 
