--- a/css/header.css
+++ b/css/header.css
@@ -58,7 +58,7 @@ header.active{
   width: 100%;
   height: 100%;
   background-image: url('../img/site_logo.png');
-  background-size: cover;
+  background-size: 100% 100%;
   background-position:center;
   background-repeat: no-repeat;
 }
@@ -66,11 +66,12 @@ header.active{
 @media screen and (max-width: 1000px) {
   .header-log {
     width: 330px;
+    height: auto;
   }
 }
 @media screen and (max-width: 768px) {
   .header-log{
-    padding: 0;
+    padding: 10px;
   }
   .header-log a {
     display: block;
@@ -84,7 +85,6 @@ header.active{
 @media screen and (max-width: 500px) {
   .header-log {
     width: 230px;
-    height: 80%;
   }
   .header-log a {
     display: block;
