--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,7 @@
 .header-wrapper{
   width: 100%;
   height: 100px;
+
 }
 
 header {
@@ -25,6 +26,7 @@ header {
   width: 100%;
   font-family: 'Noto Sans JP', sans-serif;
   background-color: #FFF;
+  max-width: 1600px;
 }
 
 header.active{
@@ -50,17 +52,20 @@ header.active{
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 40px;
+  padding-left: 10px;
 }
 
 .header-log a {
   display: block;
   width: 100%;
   height: 100%;
-  background-image: url('../img/site_logo.png');
+  /* background-image: url('../img/site_logo.png');
   background-size: 100% 100%;
   background-position:center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
+}
+.header-log a img {
+  width: 74%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -84,11 +89,11 @@ header.active{
 
 @media screen and (max-width: 500px) {
   .header-log {
-    width: 230px;
+    width: 275px;
   }
   .header-log a {
     display: block;
-    width: 230px;
+    width: 265px;
     height: 80px;
     position: fixed;
   }
