--- a/css/infomation.css
+++ b/css/infomation.css
@@ -399,6 +399,7 @@ ul{
 }
 .photo img {
   width:100%;
+  vertical-align: bottom;
 
 }
 
@@ -677,6 +678,7 @@ ul{
 
   .photo{
     width: 80%;
+  
   }
   
   .activity_1:nth-child(even) .phrase{
